--- a/src/package.json
+++ b/src/package.json
@@ -1,16 +1,44 @@
 {
-  "name": "src",
+  "name": "fitjob-api",
   "version": "1.0.0",
-  "main": "main.ts",
-  "type": "module",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js",
+    "dev": "nodemon server.ts",
+    "build": "tsc",
+    "test": "jest",
+    "seed": "ts-node prisma/seed.ts"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/node": "^22.15.15"
+    "@types/argon2": "^0.14.1",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.15.15",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "prisma": "^6.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
+  },
+  "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@prisma/client": "^6.7.0",
+    "@types/bcryptjs": "^2.4.6",
+    "argon2": "^0.43.0",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2"
   }
 }
