--- a/src/package.json
+++ b/src/package.json
@@ -22,13 +22,14 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.15.15",
+    "@types/node": "^22.15.18",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "prisma": "^6.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2"
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
