--- a/src/package.json
+++ b/src/package.json
@@ -17,7 +17,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/argon2": "^0.14.1",
+    "@types/argon2": "^0.15.0",
     "@types/cors": "^2.8.18",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
@@ -34,12 +34,16 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.7.0",
-    "@types/bcryptjs": "^2.4.6",
-    "argon2": "^0.43.0",
-    "bcryptjs": "^3.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/yamljs": "^0.2.34",
+    "argon2": "^0.31.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
